<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="ga_trackingId">UA-31565733-3</string>
    <string name="app_id">1437365169809928</string>
    <string name="app_name">MiniInTheBox</string>
    <string name="app_update">MiniInTheBox Update</string>
    <string name="exit_msg">sure to exit MiniInTheBox?</string>
    <string name="xlistview_header_hint_normal">pull to refresh</string>
    <string name="xlistview_header_hint_ready">lose to refresh</string>
    <string name="xlistview_header_hint_loading">loading...</string>
    <string name="xlistview_header_last_time">last update time：</string>
    <string name="xlistview_footer_hint_normal">load more</string>
    <string name="xlistview_footer_hint_ready">lose load more</string>
    <string name="Email">E-mail</string>
    <string name="Home">Home</string>
    <string name="History">History</string>
    <string name="Sales">Sales</string>
    <string name="Me">Me</string>
    <string name="Setting">Setting</string>
    <string name="MyOrders">My Orders</string>
    <string name="MyFavorites">My Favorites</string>
    <string name="MyAccount">My Account</string>
    <string name="SignIn">Sign In</string>
    <string name="CreateAccount">Create account</string>
    <string name="ClearAll">Clear all</string>
    <string name="Cancel">Cancel</string>
    <string name="Country">Country</string>
    <string name="Language">Language</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Currency">Currency</string>
    <string name="AboutUs">About us</string>
    <string name="Logout">logout</string>
    <string name="ThirdPartyLicense">Third Party License</string>
    <string name="Shipping">Shipping</string>
    <string name="Payment">Payment</string>
    <string name="TermsofUse">Terms of Use</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="ReturnPolicy">Return Policy</string>
    <string name="AddShippingInsurancetoyourorder">Add Shipping Insurance to your order</string>
    <string name="Haveacoupon">Have a coupon?</string>
    <string name="Apply">Apply</string>
    <string name="PlaceOrder">Place your Order</string>
    <string name="PaymentMethod">Payment Method</string>
    <string name="PleaseSelectYourPaymentMethod">Please select your payment method</string>
    <string name="Profile">Profile</string>
    <string name="Male">Men</string>
    <string name="Female">Women</string>
    <string name="Sex">Sex</string>
    <string name="Name">Name</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="Passwordcannotempty">Password cannot be empty!</string>
    <string name="Confirmpasswordcannotempty">Confirm Password box cannot be empty!</string>
    <string name="Youremailisinvalid">Your email is invalid!</string>
    <string name="Anaccountalreadyexistsforthisemailaddress">An account already exists for this email address.</string>
    <string name="SomeerroroccurwhileprocessyourrequestPleasetryagain">An error occur while processing your request. Please try again.</string>
    <string name="reloadmsg">error,click to reload</string>
    <string name="errormsg">error,please try later</string>
    <string name="loading" />
    <string name="myaccount_password_exsit">Exsiting password</string>
    <string name="myaccount_password_new">New password</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Done">Done</string>
    <string name="Add">Add</string>
    <string name="Sort">Sort</string>
    <string name="ShippingAddress">Shipping Address</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Address">Address</string>
    <string name="AddressExtra">Address Line 2</string>
    <string name="City">City</string>
    <string name="selecttaxcodetype">Tax Code Type</string>
    <string name="TaxCode">Tax Code</string>
    <string name="ZIPPostalCode">ZIP/Postal Code</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="EditAddress">Edit Address</string>
    <string name="NewAddress">New Address</string>
    <string name="Pleaseinputyour">Please input your</string>
    <string name="AddaNewShippingAddress">Add a New Shipping Address</string>
    <string name="AddressBook">Address Book</string>
    <string name="SelectYourCountryRegion">Select Your Country/Region</string>
    <string name="SelectYourStateProvinceRegion">Select Your State/Province/Region</string>
    <string name="StateProvinceRegion">State/Province/Region</string>
    <string name="PleaseSelectYourCountry">Please Select Your Country</string>
    <string name="PleaseSelectYourZone">Please Select Your Region</string>
    <string name="PleaseInputYourState">Please Input Your State!</string>
    <string name="Search">Search</string>
    <string name="OK">OK</string>
    <string name="SearchHistory">History</string>
    <string name="ClearHistory">Clear History</string>
    <string name="QTY">QTY</string>
    <string name="CartSummary">Cart Summary</string>
    <string name="TotalAmount">Total Amount</string>
    <string name="OFF">OFF</string>
    <string name="Checkout">Checkout</string>
    <string name="searchnohistory">No search history</string>
    <string name="searchnoitel">No results for</string>
    <string name="carttotalcount">Total Count</string>
    <string name="restsuccess">Reset Success</string>
    <string name="restpd">Reset Password</string>
    <string name="logoutsuccess">Logout Success</string>
    <string name="registsuccess">Regist Success</string>
    <string name="YourHistoryRecordisEmpty">Your History Record is Empty!</string>
    <string name="noresult">No result</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="OrderSummary">Order Summary</string>
    <string name="OrderNumber">Order Number</string>
    <string name="NumberofItems">Number of items</string>
    <string name="ThankyouforshoppingwithusYourorderhasbeenreceived">Thank you for shopping with us! Your order has been received!</string>
    <string name="CARTTOTAL">CART TOTAL</string>
    <string name="bottom_title">LightintheBox On The Go</string>
    <string name="MiniInTheBox">LightintheBox</string>
    <string name="FalshSale">Falsh Sale</string>
    <string name="InTime">In Time</string>
    <string name="Lightinthebox">Lightinthebox</string>
    <string name="version">Version 2.4.1</string>
</resources>