<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:background="#fff8fced" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
        <ImageView android:background="@drawable/successful_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
        <TextView android:textSize="12.0sp" android:textColor="#ff92b934" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:text="@string/ThankyouforshoppingwithusYourorderhasbeenreceived" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/buttoncolor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/OrderSummary" />
        <ImageView android:background="@color/me_split_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <TextView android:textSize="12.0sp" android:textColor="@color/buttoncolor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/OrderNumber" />
            <TextView android:textSize="11.0sp" android:textColor="#ff000000" android:id="@id/number_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/buttoncolor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/CARTTOTAL" />
            <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/total_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/buttoncolor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NumberofItems" />
            <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/count_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/buttoncolor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/PaymentMethod" />
            <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/method_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>