<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/bgcolor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollview" android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerHorizontal="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:id="@id/ll_setting" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/me_graylight" android:id="@id/textview_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/Setting" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:id="@id/countryView" android:background="@color/white" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:textColor="@color/black" android:id="@id/country" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/Country" android:layout_weight="1.0" style="@style/usercentertextstyle" />
                <TextView android:gravity="right" android:id="@id/country_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/Country" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:id="@id/languageview" android:background="@color/white" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:id="@id/language" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/Language" android:layout_weight="1.0" style="@style/usercentertextstyle" />
                <TextView android:gravity="right" android:id="@id/language_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="Language" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:id="@id/currencyview" android:background="@color/white" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:id="@id/currency" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/Currency" android:layout_weight="1.0" style="@style/usercentertextstyle" />
                <TextView android:gravity="right" android:id="@id/currency_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/Currency" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/box_bottom" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="15.0sp" android:textColor="#ff666666" android:id="@id/bottom_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:text="@string/bottom_title" />
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <ImageView android:layout_gravity="center_horizontal" android:id="@id/mini" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/in_logo" />
                        <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/MiniInTheBox" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <ImageView android:layout_gravity="center_horizontal" android:id="@id/falsh_sale" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/falsh_logo" />
                        <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/FalshSale" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <ImageView android:layout_gravity="center_horizontal" android:id="@id/in_time" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/intime_log" />
                        <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/InTime" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:background="@color/white" android:clickable="true" android:layout_width="fill_parent" android:layout_height="47.299988dip" android:layout_marginTop="10.0dip">
                <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/me_graylight" android:id="@id/aboutusview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/AboutUs" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:id="@id/returnpolicyview" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:id="@id/returnpolicy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/ReturnPolicy" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:id="@id/privacy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/PrivacyPolicy" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:background="@color/white" android:clickable="true" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:id="@id/termsofuse" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/TermsofUse" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:background="@color/white" android:clickable="true" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:id="@id/payment" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/Payment" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:background="@color/white" android:clickable="true" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:id="@id/shipping" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/Shipping" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:background="@color/white" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:id="@id/thirdparty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/ThirdPartyLicense" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <ImageView android:background="@color/me_split_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:gravity="center_vertical" android:background="@color/white" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="47.299988dip">
                <TextView android:id="@id/light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/Lightinthebox" android:layout_weight="1.0" style="@style/usercentertextstyle" />
            </LinearLayout>
            <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/version" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>